plugins {
    id 'com.android.application'
    id 'com.google.gms.google-services'
    // Apply the Crashlytics Gradle plugin
    id 'com.google.firebase.crashlytics'
}

android {
    compileSdkVersion 30
    buildToolsVersion "30.0.2"

    defaultConfig {
        applicationId "com.revolo.lock"
        minSdkVersion 26
        targetSdkVersion 30
        versionCode 202104091
        versionName "1.0.32"

        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"

        // 指定room.schemaLocation生成的文件路径
        javaCompileOptions {
            annotationProcessorOptions {
                arguments = ["room.schemaLocation": "$projectDir/schemas".toString()]
            }
        }

        // Set the properties within `local.properties` into a `Properties` class so that values
        // within `local.properties` (e.g. Maps API key) are accessible in this file.
        Properties properties = new Properties()
        if (rootProject.file("local.properties").exists()) {
            properties.load(rootProject.file("local.properties").newDataInputStream())
        }

        // Inject the Maps API key into the manifest
        manifestPlaceholders = [ mapsApiKey : properties.getProperty("MAPS_API_KEY", "") ]
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }

    repositories {
        flatDir {
            dirs 'libs'
        }
    }

    android.applicationVariants.all { variant ->
        variant.outputs.all {
            def date = new Date().format("yyyyMMdd" , TimeZone.getDefault())
            if(variant.buildType.name.equals('debug')){
                outputFileName = "revolo_debug${date}_${versionName}.apk"
            }
            if(variant.buildType.name.equals('release')){
                outputFileName = "revolo${versionCode}_${versionName}_release.apk"
            }
        }
    }

    signingConfigs {
        debug {
            keyAlias 'revolo'
            keyPassword 'Rev0l0&Ka66as'
            storeFile file('D:/code/20201116code/revoloLock/revolo.jks')
            storePassword 'Rev0l0&Ka66as'
        }
        release {
            keyAlias 'revolo'
            keyPassword 'Rev0l0&Ka66as'
            storeFile file('D:/code/20201116code/revoloLock/revolo.jks')
            storePassword 'Rev0l0&Ka66as'
        }
    }

}

dependencies {

    implementation 'androidx.appcompat:appcompat:1.2.0'
    implementation 'com.google.android.material:material:1.2.1'
    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
    implementation 'androidx.navigation:navigation-fragment:2.3.3'
    implementation 'androidx.navigation:navigation-ui:2.3.3'
    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.2.0'
    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.0'
    implementation 'com.google.android.gms:play-services-maps:17.0.0'
    implementation project(path: ':keep_alive')
    testImplementation 'junit:junit:4.13.2'
    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'

    // 工具类库
    // if u use AndroidX, use the following
    implementation 'com.blankj:utilcodex:1.30.5'
    // 日志工具类
    implementation 'com.jakewharton.timber:timber:4.7.1'
    // 权限请求帮助库
    // For developers using AndroidX in their applications
    implementation 'pub.devrel:easypermissions:3.0.0'
    // 引用第三方蓝牙库，后续也可以通过源码进行修改
    implementation(name: 'okble-lib-1.1.5', ext: 'aar')
    // 扫描二维码
    implementation 'cn.bingoogolapple:bga-qrcode-zbar:1.3.7'
    // 权限辅助
    implementation 'pub.devrel:easypermissions:3.0.0'
    // base recyclerView辅助工具类
    implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:3.0.4'
    // base listView辅助工具类
    implementation 'com.zhy:base-adapter:3.0.3'
    // mqtt
    implementation 'org.eclipse.paho:org.eclipse.paho.client.mqttv3:1.1.1'
    implementation 'org.eclipse.paho:org.eclipse.paho.android.service:1.1.1'
    // add retrofit2
    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.9.0'
    // add okhttp
    implementation 'com.squareup.okhttp3:okhttp:4.8.0'
    implementation 'com.github.franmontiel:PersistentCookieJar:v1.0.1'
    // add rxjava
    implementation 'io.reactivex.rxjava2:rxjava:2.2.19'
    implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
    // basePopup
    implementation 'com.github.razerdp:BasePopup:2.2.18'
    // 日志
    implementation 'com.squareup.okhttp3:logging-interceptor:4.7.2'
    // 联动控件
    implementation 'com.contrarywind:Android-PickerView:4.1.9'


    // room数据库支持
    def room_version = "2.2.6"
    implementation "androidx.room:room-runtime:$room_version"
    annotationProcessor "androidx.room:room-compiler:$room_version"
    // optional - RxJava support for Room
    implementation "androidx.room:room-rxjava2:$room_version"
    // optional - Guava support for Room, including Optional and ListenableFuture
    implementation "androidx.room:room-guava:$room_version"
    // optional - Test helpers
    testImplementation "androidx.room:room-testing:$room_version"
    // 数据库加密
    implementation "net.zetetic:android-database-sqlcipher:4.4.2"

    // Firebase BoM
    implementation platform('com.google.firebase:firebase-bom:26.5.0')
    // Add the dependency for the Firebase SDK for Google Analytics
    // When using the BoM, don't specify versions in Firebase dependencies
    implementation 'com.google.firebase:firebase-analytics'
    // Declare the dependencies for the Crashlytics and Analytics libraries
    // When using the BoM, you don't specify versions in Firebase library dependencies
    implementation 'com.google.firebase:firebase-crashlytics'

    // google map
    implementation 'com.google.android.gms:play-services-maps:17.0.0'
    implementation 'com.google.android.gms:play-services-location:17.1.0'

    // 下拉刷新和上拉加载
    implementation  'com.scwang.smart:refresh-layout-kernel:2.0.3'      //核心必须依赖
    implementation  'com.scwang.smart:refresh-header-classics:2.0.3'    //经典刷新头
    implementation  'com.scwang.smart:refresh-footer-classics:2.0.3'    //经典加载

    // 图片选择
    implementation 'com.github.LuckSiege.PictureSelector:picture_library:v2.6.0'
    // 图片加载框架
    implementation 'com.github.bumptech.glide:glide:4.12.0'
    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
}